--- a/src/index.html
+++ b/src/index.html
@@ -21,10 +21,10 @@
   <body>
     <div class="container-fluid g-0">
       <div class="row">
-        <div class="position-md-relative">
+        <div class="position-relative">
           <img src="./assets/images/header.png" alt="" class="img-fluid" />
           <div
-            class="col-sm-6 col-lg-4 text-center text-md-start mt-5 pt-5 pt-md-0 ps-md-5 offset-md-2 card-img-overlay"
+            class="col-sm-6 col-lg-4 text-center text-md-start mt-5 pt-5 pt-md-0 ps-md-5 offset-md-2 position-absolute top-0"
           >
             <div class="row">
               <h1
@@ -157,7 +157,7 @@
           </p>
         </div>
         <img
-          class="img-fluid col-md-4 mb-5"
+          class="img-fluid order-first order-md-2 col-md-4 mb-5"
           src="./assets/images/bitmap1.png"
           alt=""
         />
@@ -183,13 +183,13 @@
       </div>
     </div>
     <div class="container-fluid g-0 mt-md-5">
-      <div class="position-relative d-none d-md-block">
+      <div class="position-relative ">
         <img src="./assets/images/banner2.jpg" alt="" class="img-fluid" />
         <div
-          class="col-sm-6 col-lg-4 offset-md-2 ps-5 card-img-overlay"
+          class="col-sm-6 col-lg-4 offset-md-2 ps-5 position-md-absolute bottom-md-0"
         >
           <span class="fs-4">BLOG</span>
-          <h1 class="mt-5 pt-5 mt-md-0 pt-md-0">
+          <h1 class="mt-md-5 pt-md-5">
             10 tips for safety & protection when working from home
           </h1>
           <p class="lh-sm mt-5">
