--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
       </div>
     </div>
     <div
-      class="text-center container heading offset-md-2 col-12 col-md-8 mt-5 mt-md-0 pt-5 pt-md-0"
+      class="text-center container offset-md-2 col-12 col-md-8 mt-5 mt-md-0 pt-5 pt-md-0"
     >
       <blockquote class="mt-5 pt-5 mb-5">
         <h1 class="mt-5 mt-md-0">
@@ -186,10 +186,10 @@
       <div class="position-relative ">
         <img src="./assets/images/banner2.jpg" alt="" class="img-fluid" />
         <div
-          class="col-sm-6 col-lg-4 offset-md-2 ps-5 position-md-absolute bottom-md-0"
+          class="col-sm-6 col-lg-4 offset-md-2 ps-5 position-absolute top-0"
         >
           <span class="fs-4">BLOG</span>
-          <h1 class="mt-md-5 pt-md-5">
+          <h1 class="">
             10 tips for safety & protection when working from home
           </h1>
           <p class="lh-sm mt-5">
