got responsiveness down, now gotta tweak it

--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
             <p class="text-center text-md-start">
               Wondering how secure your organization is?
             </p>
-            <button class="btn btn-primary py-1 py-md-3 mt-1 mt-md-1">
+            <button class="btn btn-primary py-2 py-md-3 mt-1 mt-md-1">
               REQUEST A SECRUITY SCAN
             </button>
           </div>
@@ -182,12 +182,10 @@
         </div>
       </div>
     </div>
-    <div class="container-fluid g-0 mt-md-5">
-      <div class="position-relative ">
+    <!-- <div class="container-fluid g-0 mt-md-5">
+      <div class="position-relative">
         <img src="./assets/images/banner2.jpg" alt="" class="img-fluid" />
-        <div
-          class="col-sm-6 col-lg-4 offset-md-2 ps-5 position-absolute top-0"
-        >
+        <div class="col-12 col-lg-4 offset-md-2 ps-5 position-absolute top-0">
           <span class="fs-4">BLOG</span>
           <h1 class="">
             10 tips for safety & protection when working from home
@@ -201,16 +199,49 @@
             Read the blog via our website and get 10 tips to keep your data safe
             while working from home. <br /><br />
           </p>
-          <button class="btn btn-dark py-3 " style="width: 245px">
+          <button class="btn btn-dark py-3" style="width: 245px">
             READ THE BLOG
           </button>
         </div>
       </div>
+    </div> -->
+    <div class="container-fluid g-0">
+      <div class="row">
+        <div class="position-relative">
+          <img src="./assets/images/banner2.jpg" alt="" class="img-fluid" />
+          <div
+            class="col-sm-6 col-lg-4 text-center text-md-start mt-5 pt-5 pt-md-0 ps-md-5 offset-md-2 position-absolute top-0"
+          >
+            <div class="row">
+              <span class="fs-4 d-none d-md-block">BLOG</span>
+              <h1
+                class="col-10 col-md-12 fs-5 fs-md-2 offset-1 offset-md-0 mb-3 mt-4 mt-md-0"
+              >
+                10 tips for safety & protection when working from home
+              </h1>
+            </div>
+            <p class="lh-sm text-center text-md-start">
+              The coronavirus outbreak has forced many office workers to work
+              from home. Here's what you need to consider so that both you and
+              your business remain protected.
+            </p>
+            <p class="text-center text-md-start">
+              Read the blog via our website and get 10 tips to keep your data
+              safe while working from home.
+            </p>
+            <button class="btn btn-dark py-1 py-md-3 mt-1 mt-md-1">
+              READ THE BLOG
+            </button>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="mb-5 pb-5 g-0 container-fluid pt-5 bg-body-tertiary">
-      <div class="row ps-5 pt-md-5">
-        <div class="col-md-4 offset-md-2 pe-5">
-          <h1 class="col-md-9 mb-4">Find out how secure your organization is!</h1>
+    <div
+      class="text-center container offset-md-2 col-12 mt-5 mt-md-0 pt-5 pt-md-0"
+    >
+      <div class="row my-5 mt-md-0 pt-5 pt-md-0">
+        <div class="col-md-4">
+          <h1 class="my-5 pt-5">Find out how secure your organization is!</h1>
           <p>
             You can book a free security scan with one of our experts. During
             this meeting we will check how secure your organization is and give
@@ -220,65 +251,158 @@
             Please fill in the form and we will contact you as soon as possible!
           </p>
         </div>
-        <div class="col-md-3 pe-5 ps-md-5">
-          <form action="">
-            <input
-              class="mb-3 col-12"
-              type="text"
-              placeholder="Voornaam"
-            /><br />
-            <input
-              class="mb-3 col-12"
-              type="text"
-              placeholder="Achternaam"
-            /><br />
-            <input
-              class="mb-3 col-12"
-              type="text"
-              placeholder="Bedrijf"
-            /><br />
-            <input
-              class="mb-3 col-12"
-              type="email"
-              placeholder="E-mailadres"
-            /><br />
-            <input
-              class="mb-3 col-12"
-              type="tel"
-              placeholder="Telefoonnummer"
-            /><br />
-            <div class="form-check mb-3 d-md-flex">
+        <div class="col-md-4 mt-5 pt-5">
+          <div class="pe-5 ps-md-5">
+            <form action="">
               <input
-                class="form-check-input me-2"
-                type="checkbox"
-                id="check1"
-                name="check1"
-                value="promos"
-              />
-              <label class="form-check-label" for="check1">
-                Yes, {RESELLER_NAME} may contact me about promotions, products
-                and services.
-              </label>
-            </div>
-            <div class="form-check mb-3 d-md-flex">
+                class="mb-3 col-12"
+                type="text"
+                placeholder="Voornaam"
+              /><br />
               <input
-                class="form-check-input me-2"
-                type="checkbox"
-                id="check2"
-                name="check2"
-                value="contact"
-              />
-              <label class="form-check-label" for="check2">
-                Yes, Vendemo may contact me about promotions, products and
-                services.
-              </label>
-            </div>
-            <button class="btn btn-dark ms-3 ms-md-0 py-3 mt-3" style="width: 245px">
-              Send
-            </button>
-          </form>
+                class="mb-3 col-12"
+                type="text"
+                placeholder="Achternaam"
+              /><br />
+              <input
+                class="mb-3 col-12"
+                type="text"
+                placeholder="Bedrijf"
+              /><br />
+              <input
+                class="mb-3 col-12"
+                type="email"
+                placeholder="E-mailadres"
+              /><br />
+              <input
+                class="mb-3 col-12"
+                type="tel"
+                placeholder="Telefoonnummer"
+              /><br />
+              <div class="form-check mb-3 d-flex">
+                <input
+                  class="form-check-input me-2"
+                  type="checkbox"
+                  id="check1"
+                  name="check1"
+                  value="promos"
+                />
+                <label class="form-check-label" for="check1">
+                  Yes, {RESELLER_NAME} may contact me about promotions, products
+                  and services.
+                </label>
+              </div>
+              <div class="form-check mb-3 d-flex">
+                <input
+                  class="form-check-input me-2"
+                  type="checkbox"
+                  id="check2"
+                  name="check2"
+                  value="contact"
+                />
+                <label class="form-check-label" for="check2">
+                  Yes, Vendemo may contact me about promotions, products and
+                  services.
+                </label>
+              </div>
+              <button
+                class="btn btn-dark ms-3 ms-md-0 py-3 mt-3"
+                style="width: 245px"
+              >
+                Send
+              </button>
+            </form>
+          </div>
         </div>
       </div>
+      <!-- <blockquote class="mt-5 pt-5 mb-5">
+        <h1 class="mt-5 mt-md-0">
+          <span>&ldquo;</span>
+          By 2024, 3/4 of all directors will be held personally responsible for
+          cybersecurity incidents in companies
+          <span>&rdquo;</span>
+        </h1>
+      </blockquote> -->
     </div>
+
+    <!-- <div class="mb-5 pb-5 g-0 container-fluid bg-body-tertiary">
+      <div class="col-md-12 ps-5 p-5">
+        <div class="row">
+          <div class="col-md-3 offset-md-2 pe-5">
+            <h1 class="mb-4">Find out how secure your organization is!</h1>
+            <p>
+              You can book a free security scan with one of our experts. During
+              this meeting we will check how secure your organization is and
+              give you an advice to improve your security.
+            </p>
+            <p>
+              Please fill in the form and we will contact you as soon as
+              possible!
+            </p>
+          </div>
+          <div class="col-md-3 pe-5 ps-md-5">
+            <form action="">
+              <input
+                class="mb-3 col-12"
+                type="text"
+                placeholder="Voornaam"
+              /><br />
+              <input
+                class="mb-3 col-12"
+                type="text"
+                placeholder="Achternaam"
+              /><br />
+              <input
+                class="mb-3 col-12"
+                type="text"
+                placeholder="Bedrijf"
+              /><br />
+              <input
+                class="mb-3 col-12"
+                type="email"
+                placeholder="E-mailadres"
+              /><br />
+              <input
+                class="mb-3 col-12"
+                type="tel"
+                placeholder="Telefoonnummer"
+              /><br />
+              <div class="form-check mb-3 d-md-flex">
+                <input
+                  class="form-check-input me-2"
+                  type="checkbox"
+                  id="check1"
+                  name="check1"
+                  value="promos"
+                />
+                <label class="form-check-label" for="check1">
+                  Yes, {RESELLER_NAME} may contact me about promotions, products
+                  and services.
+                </label>
+              </div>
+              <div class="form-check mb-3 d-md-flex">
+                <input
+                  class="form-check-input me-2"
+                  type="checkbox"
+                  id="check2"
+                  name="check2"
+                  value="contact"
+                />
+                <label class="form-check-label" for="check2">
+                  Yes, Vendemo may contact me about promotions, products and
+                  services.
+                </label>
+              </div>
+              <button
+                class="btn btn-dark ms-3 ms-md-0 py-3 mt-3"
+                style="width: 245px"
+              >
+                Send
+              </button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div> -->
   </body>
 </html>
