--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
         <div class="position-relative">
           <img src="./assets/images/header.png" alt="" class="img-fluid" />
           <div
-            class="col-sm-6 col-lg-4 text-center text-md-start mt-5 pt-5 pt-md-0 ps-md-5 offset-md-2 position-absolute top-0"
+            class="col-10 offset-1 col-lg-4 text-center text-md-start mt-5 pt-5 pt-md-0 ps-md-5 offset-md-2 position-absolute top-0"
           >
             <div class="row">
               <h1
@@ -50,10 +50,10 @@
       </div>
     </div>
     <div
-      class="text-center container offset-md-2 col-12 col-md-8 mt-5 mt-md-0 pt-5 pt-md-0"
+      class="text-center container-fluid g-0 offset-1 offset-md-2 col-10 col-md-8 mt-5 mt-md-0 pt-5 pt-md-0"
     >
-      <blockquote class="mt-5 pt-5 mb-5">
-        <h1 class="mt-5 mt-md-0">
+      <blockquote class="my-5 pt-5">
+        <h1 class="mt-5 pt-3 mt-md-0 fs-4">
           <span>&ldquo;</span>
           By 2024, 3/4 of all directors will be held personally responsible for
           cybersecurity incidents in companies
@@ -66,14 +66,14 @@
     </div>
     <div class="mb-5 text-center col-10 col-md-6 offset-md-3 offset-1">
       <h2 class="mt-md-5 pt-5 fs-1">Cyber threats. What exactly are they?</h2>
-      <p class="mt-md-5 fs-6 col-9 offset-1">
+      <p class="mt-md-5 fs-6 col-10 offset-1">
         There are several cyber threats that cybersecurity protects against.
         Below, we name some of the methods that malicious individuals use to
         gain control of computer systems - often through a company's employees.
       </p>
     </div>
     <div class="container offset-md-2 mt-5">
-      <div class="row px-5">
+      <div class="row col-10 offset-1">
         <div class="col-md-2">
           <h4 class="">Ransomware</h4>
           <p class="lh-sm mt-md-4">
@@ -105,11 +105,11 @@
           </p>
         </div>
       </div>
-      <button class="btn btn-primary py-3 offset-2 offset-md-3 mt-md-5">
+      <button class="btn btn-primary py-3 my-3 offset-2 offset-md-3 mt-md-5">
         I WANT A SECRUITY SCAN
       </button>
     </div>
-    <div class="container col-md-8 my-3 my-md-5 pb-md-5">
+    <div class="container-fluid g-0 col-md-8 my-3 my-md-5 pb-md-5">
       <video
         class="img-fluid"
         src="./assets/images/video.mp4"
@@ -117,31 +117,33 @@
         loop
       ></video>
     </div>
-    <div class="container-fluid my-md-5 bg-body-tertiary">
-      <div class="row offset-1 py-md-5">
-        <img class="col-md-5" src="./assets/images/book.png" alt="" />
-        <div class="col-md-5">
-          <h2 class="text-secondary">E-BOOK DOWNLOAD</h2>
-          <h2>Get insights on cybersecurity and learn to protect!</h2>
-          <p>
-            A recent survey shows that business decision-makers are keen to
-            tighten security measures, but have some catching up to do.
-            According to the survey, 61% of European decision-makers would like
-            to be more proactive on cyber security within their companies - but
-            lack the specialist knowledge to do so. Download this e-book and
-            find out what you can do to improve cybersecurity in 2023.
-          </p>
-          <button
-            class="btn btn-secondary py-3 px-5 text-body"
-            style="width: 300px"
-          >
-            DOWNLOAD
-          </button>
+    <div class="container-fluid g-0 my-md-5 bg-body-tertiary">
+      <div class="col-10 offset-1 py-md-5">
+        <div class="row">
+          <img class="col-md-5" src="./assets/images/book.png" alt="" />
+          <div class="col-md-5">
+            <h2 class="text-secondary">E-BOOK DOWNLOAD</h2>
+            <h2>Get insights on cybersecurity and learn to protect!</h2>
+            <p>
+              A recent survey shows that business decision-makers are keen to
+              tighten security measures, but have some catching up to do.
+              According to the survey, 61% of European decision-makers would
+              like to be more proactive on cyber security within their companies
+              - but lack the specialist knowledge to do so. Download this e-book
+              and find out what you can do to improve cybersecurity in 2023.
+            </p>
+            <button
+              class="btn btn-secondary py-3 px-5 text-body"
+              style="width: 300px"
+            >
+              DOWNLOAD
+            </button>
+          </div>
         </div>
       </div>
     </div>
-    <div class="container heading py-3">
-      <h2 class="text-center pb-md-5 my-5 fs-1">How can Vendemo help you?</h2>
+    <div class="container-fluid g-0 heading py-3">
+      <h2 class="text-center pb-md-5 my-2 fs-1">How can Vendemo help you?</h2>
       <div class="row mt-md-5 mb-5">
         <div class="col-md-4 offset-md-2 px-5">
           <h2 class="pb-4">Security from a distance</h2>
@@ -206,6 +208,7 @@
       </div>
     </div> -->
     <div class="container-fluid g-0">
+      <div class="col">
       <div class="row">
         <div class="position-relative">
           <img src="./assets/images/banner2.jpg" alt="" class="img-fluid" />
@@ -220,28 +223,30 @@
                 10 tips for safety & protection when working from home
               </h1>
             </div>
-            <p class="lh-sm text-center text-md-start">
+            <p class="lh-sm col-10 offset-1 text-md-start">
               The coronavirus outbreak has forced many office workers to work
               from home. Here's what you need to consider so that both you and
               your business remain protected.
             </p>
-            <p class="text-center text-md-start">
+            <p class="col-10 offset-1 text-center text-md-start">
               Read the blog via our website and get 10 tips to keep your data
               safe while working from home.
             </p>
-            <button class="btn btn-dark py-1 py-md-3 mt-1 mt-md-1">
+            <button class="btn btn-dark py-3 mt-1 mt-md-1">
               READ THE BLOG
             </button>
           </div>
         </div>
       </div>
+      
     </div>
     <div
-      class="text-center container offset-md-2 col-12 mt-5 mt-md-0 pt-5 pt-md-0"
+      class="text-center container-fluid g-0 mt-5 mt-md-0 pt-5 pt-md-0 bg-body-tertiary"
     >
+    <div class="col-10 offset-1 offset-md-2">
       <div class="row my-5 mt-md-0 pt-5 pt-md-0">
         <div class="col-md-4">
-          <h1 class="my-5 pt-5">Find out how secure your organization is!</h1>
+          <h1 class="mt-5 my-md-5 pt-5">Find out how secure your organization is!</h1>
           <p>
             You can book a free security scan with one of our experts. During
             this meeting we will check how secure your organization is and give
@@ -251,8 +256,8 @@
             Please fill in the form and we will contact you as soon as possible!
           </p>
         </div>
-        <div class="col-md-4 mt-5 pt-5">
-          <div class="pe-5 ps-md-5">
+        <div class="col-md-4 mt-md-5 pt-md-5">
+          <div class="pe-md-5 ps-md-5">
             <form action="">
               <input
                 class="mb-3 col-12"
@@ -323,6 +328,7 @@
           <span>&rdquo;</span>
         </h1>
       </blockquote> -->
+    </div>
     </div>
 
     <!-- <div class="mb-5 pb-5 g-0 container-fluid bg-body-tertiary">
