got rid of scrolling to the right issue

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,8 @@
     <title>Deann Videtto Take Home</title>
   </head>
   <body>
-    <div class="container-fluid g-0">
+    <div class="container-fluid w-100">
+    <div class="container-fluid g-0 ">
       <div class="row">
         <div class="position-relative">
           <img src="./assets/images/header.png" alt="" class="img-fluid" />
@@ -53,7 +54,7 @@
       class="text-center container-fluid g-0 offset-1 offset-md-2 col-10 col-md-8 mt-5 mt-md-0 pt-5 pt-md-0"
     >
       <blockquote class="my-5 pt-5">
-        <h1 class="mt-5 pt-3 mt-md-0 fs-4">
+        <h1 class="mt-5 pt-3 mt-md-0 fs-1">
           <span>&ldquo;</span>
           By 2024, 3/4 of all directors will be held personally responsible for
           cybersecurity incidents in companies
@@ -72,8 +73,9 @@
         gain control of computer systems - often through a company's employees.
       </p>
     </div>
-    <div class="container offset-md-2 mt-5">
-      <div class="row col-10 offset-1">
+    <div class="container-fluid mt-5">
+      <div class="col-10 offset-2">
+      <div class="row ">
         <div class="col-md-2">
           <h4 class="">Ransomware</h4>
           <p class="lh-sm mt-md-4">
@@ -105,7 +107,8 @@
           </p>
         </div>
       </div>
-      <button class="btn btn-primary py-3 my-3 offset-2 offset-md-3 mt-md-5">
+      </div>
+      <button class="btn btn-primary py-3 my-3 offset-2 offset-md- mt-md-5">
         I WANT A SECRUITY SCAN
       </button>
     </div>
@@ -410,5 +413,6 @@
         </div>
       </div>
     </div> -->
+    </div>
   </body>
 </html>
